# ARX5

./: .gitignore  LICENSE  readme.txt
arx5_ws/: arx.sh
arx5_ws/src/arm_control/: CMakeLists.txt
arx5_ws/src/arm_control/include/App/: arm_control.h  arx_s.h
arx5_ws/src/arm_control/include/Hardware/: motor.h
arx5_ws/src/arm_control/src/: arx.cpp
arx5_ws/src/arm_control/src/App/: arm_control.cpp
arx5_ws/src/arm_control/teach_record/: out.txt
follow_control/: follow_control.sh
follow_control/follow1/: follow_control.sh
follow_control/follow1/src/arm_control/: CMakeLists.txt
follow_control/follow1/src/arm_control/include/App/: arm_control.h
follow_control/follow1/src/arm_control/src/: arx.cpp
follow_control/follow1/src/arm_control/src/App/: arm_control.cpp
follow_control/follow2/src/arm_control/: CMakeLists.txt
follow_control/follow2/src/arm_control/include/Hardware/: can.h
follow_control/follow2/src/arm_control/src/: arx.cpp
remote_control/: make.sh  remote.sh
remote_control/follow1/src/arm_control/: CMakeLists.txt
remote_control/follow1/src/arm_control/include/App/: arm_control.h
remote_control/follow1/src/arm_control/src/: arx.cpp
remote_control/follow1/src/arm_control/src/App/: arm_control.cpp
remote_control/follow2/src/arm_control/: CMakeLists.txt
remote_control/follow2/src/arm_control/src/: arx.cpp
remote_control/follow2/src/arm_control/src/App/: arm_control.cpp
remote_control/master1/src/arm_control/: CMakeLists.txt
remote_control/master1/src/arm_control/include/App/: arm_control.h
remote_control/master1/src/arm_control/include/Ecat/: ecat_base.hpp
remote_control/master1/src/arm_control/src/: arx.cpp
remote_control/master1/src/arm_control/src/App/: arm_control.cpp
remote_control/master2/src/arm_control/: CMakeLists.txt
remote_control/master2/src/arm_control/src/: arx.cpp
remote_control/master2/src/arm_control/src/App/: arm_control.cpp
